# ci-splitter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: parallel_tests.yml
src/ci_splitter/: generate_workflow.py
tests/: test_math_2.py
